updated smart panel page

--- a/Task3/smartpannel_index.html
+++ b/Task3/smartpannel_index.html
@@ -15,7 +15,7 @@
 		<div class="row header">
 			<div class="col-md-2"></div>
 			<div class="col-md-5 logo ">
-				<img src="logo.png" height="100px" >
+				<img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/logo.png" height="100px" >
 			</div>
 			<div class="col-md-1 header-about">About</div>
 			<div class="col-md-1 header-FAQ">FAQ</div>
@@ -45,7 +45,7 @@
        
     </div>
     <div class="col-md-1 ">
-         <img src="wifi.png" width="100px" height="100px">
+         <img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/wifi.png" width="100px" height="100px">
     </div>
     <div class="col-md-3 why-join-content">
         <p class="why-join-content-head">Build a Better Digital World</p>
@@ -55,7 +55,7 @@
              people every day.</p>
     </div>
     <div class="col-md-1 ">
-         <img src="atom.png" width="100px" height="100px">
+         <img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/atom.png" width="100px" height="100px">
     </div>
      <div class="col-md-4 why-join-content">
     <p class="why-join-content-head">Be Part of an Elite Community</p>
@@ -85,12 +85,12 @@
     <div class="content">
     <div class="row picture-container">
     <div class="col-md-10 ">
-        <img src="huy.png" width="150px" height="150px" >
-        <img src="Lauren.png" width="150px" height="150px">
-        <img src="Christine.png" width="150px" height="150px">
-        <img src="Anne.png" width="150px" height="150px">
-        <img src="Christian.png" width="150px" height="150px">
-        <img src="Karla.png" width="150px" height="150px">
+        <img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/huy.png" width="150px" height="150px" >
+        <img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/Lauren.png" width="150px" height="150px">
+        <img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/Christine.png" width="150px" height="150px">
+        <img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/Anne.png" width="150px" height="150px">
+        <img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/Christian.png" width="150px" height="150px">
+        <img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/Karla.png" width="150px" height="150px">
     </div>
     </div>
 <div class="row testimonal">
@@ -120,9 +120,9 @@
 <div class="row">
 
 <div class="row-md-3 ">
-        <img class="how-work-image" src="write.png" width="150px" height="150px" >
-        <img class="how-work-image" src="device.png" width="150px" height="150px">
-        <img class="how-work-image" src="sun.png" width="150px" height="150px">
+        <img class="how-work-image" src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/write.png" width="150px" height="150px" >
+        <img class="how-work-image" src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/device.png" width="150px" height="150px">
+        <img class="how-work-image" src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/sun.png" width="150px" height="150px">
     </div>
 
  <div class="col-xs-2 ">
@@ -159,9 +159,9 @@
    <div class="row">
 
 <div class="row-md-3 ">
-        <img class="how-work-image" src="lock.png" width="150px" height="150px" >
-        <img class="how-work-image" src="man.png" width="150px" height="150px">
-        <img class="how-work-image" src="search.png" width="150px" height="150px">
+        <img class="how-work-image" src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/lock.png" width="150px" height="150px" >
+        <img class="how-work-image" src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/man.png" width="150px" height="150px">
+        <img class="how-work-image" src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/search.png" width="150px" height="150px">
     </div>
 
  <div class="col-xs-2">
@@ -202,14 +202,14 @@
        
     </div>
     <div class="col-md-1 ">
-         <img src="money.png" width="100px" height="100px">
+         <img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/money.png" width="100px" height="100px">
     </div>
     <div class="col-md-3 why-join-content">
         <p class="why-join-content-head">Monthly Rewards</p>
             <p class="why-join-content-body"> Get $5 just for qualifying, and $5 for every 30 days your devices stay connected. Take part in <span style="color:#00CDCB;">monthly giveaways</span> and complete surveys to maximize your rewards!</p>
     </div>
     <div class="col-md-1 ">
-         <img src="lotry.png" width="100px" height="100px">
+         <img src="C:/Users/KAJOLDOSS/Desktop/NFN LABS/Internship/Task3/images/lotry.png" width="100px" height="100px">
     </div>
      <div class="col-md-3 why-join-content">
     <p class="why-join-content-head">Loyalty Bonuses</p>
